# 11-team-service-ai

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose-db.yml  init.sql  pyproject.toml
.github/workflows/: cd.yml  ci.yml
api/: main.py
api/core/: exception.py
api/routes/: applicant.py  document.py  job_posting.py
api/service/: applicant.py  document.py  job_posting.py
pipelines/applicant_evaluation/: main.py
pipelines/applicant_evaluation/application/: dtos.py
pipelines/candidate_comparison/: main.py
pipelines/job_analysis/: main.py  service.py  simple_extraction_service.py
pipelines/job_analysis/application/: mapper.py
pipelines/job_analysis/data/: models.py
pipelines/job_analysis/domain/: job_duplicate_checker.py  (+1 more)
pipelines/portfolio_analysis/: main.py
pipelines/resume_analysis/: main.py
shared/: config.py  utils.py
shared/db/: connection.py
shared/pipeline_bridge/: __init__.py  interface.py
shared/schema/: applicant.py  common_schema.py  document.py  job_posting.py
shared/vector_db/: __init__.py  client.py
tests/: conftest.py  test_data_insert.sql
tests/api/: test_document_router.py  test_job_posting_router.py
tests/crawlers/: test_crawler_dev.py
tests/extract/: saramin_1_result.txt  test_extractor.py
tests/integration/: practice_weaviate.py  test_db.py  test_doc_repository.py  test_job_repository.py  test_s3_storage.py
tests/job_analysis/: test_deletion.py  test_job_analysis_pipeline_dummy.py
tests/normalizer/: test_company_normalizer.py  test_skill_normalizer.py
tests/unit/: test_pdf_extractor.py
(+122 files in other folders)
